@@ -1,5 +1,10 @@
 2004-12-30  Michael Koch  <konqueror@gmx.de>
 
+	* src/gnu/localegen/JavaGenerator.java (computeLocalNames):
+	Generate data for localized variant names.
+
+2004-12-30  Michael Koch  <konqueror@gmx.de>
+
 	* src/gnu/localegen/JavaGenerator.java
 	(computeLocalNames): Generate Hashtable for language names.
 
